--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=7ef0da7bb76b96f2dc797d04b8c81176
+APP_SECRET=4dedd777df363b0c211f803356ad71ee
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,5 +25,7 @@ APP_SECRET=7ef0da7bb76b96f2dc797d04b8c81176
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://my_user:my_password@127.0.0.1:3306/ssl_db?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
