--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,12 @@ framework:
     php_errors:
         log: true
 
+    ## Enable serialize of symfony and root for mappings
+    serializer:
+        enabled: true
+        mapping:
+            paths: [ '%kernel.project_dir%/config/serializer' ]
+
 when@test:
     framework:
         test: true
