--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,13 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Form/Model/'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    ## this is usefully for inject services in the functions without
+    ## the previous declaration in the constructor
+    App\Controller\:
+        resource: '../src/Controller'
+        tags: ['controller.service_arguments']
