Added - add services in app and allow cors

--- a/api/.env
+++ b/api/.env
@@ -29,3 +29,7 @@ APP_SECRET=4dedd777df363b0c211f803356ad71ee
 DATABASE_URL="mysql://my_user:my_password@127.0.0.1:3306/ssl_db?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
