--- a/api/composer.json
+++ b/api/composer.json
@@ -15,6 +15,7 @@
         "friendsofsymfony/rest-bundle": "^3.3",
         "jms/serializer-bundle": "^4.2",
         "league/flysystem-bundle": "^3.0",
+        "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "sensio/framework-extra-bundle": "^6.2",
